src/test/06-Errors/return-missing-1.txt
return-missing-1.ck:6:5: error: function 'float foo()' was defined with return type 'float' -- but returning type 'void'
[6]     return;
        ^
return-missing-1.ck: ...in function 'float foo()'
